# The-Lingo

./: .gitignore  AUTHORS  Design.md  LICENSE  README.md  Simple-Editor.rkt  The-Lingo.rkt  the-lingo.rkt
.github/workflows/: scala.yml
ASM/CoreASM/: README.md
AttrDT/: README.md
AttrDT/Scala/: README.md  build.sbt
AttrDT/Scala/shared/src/main/scala/: AttrDT.scala  AttrT.scala
AttrDT/Scala/shared/src/test/scala/: Test.scala
AttrDT/legacy/: AttrDT.scala
CompatibilityLayer/: README.md
CoreDependentType/: Design.md
CoreDependentTypeEffect/: README.md
CoreFunctionalProgramming/: Design.md
CoreFunctionalProgramming/Rust/The-Lingo/: Cargo.toml
CoreFunctionalProgramming/Rust/corefp-lingo/: Cargo.toml
CoreFunctionalProgramming/Rust/corefp-lingo/src/: lib.rs
CoreRelationalProgramming/: Design.md
CoreRelationalProgramming/Rust/corerel-lingo/: Cargo.toml
CoreRelationalProgramming/Rust/corerel-lingo/src/: lib.rs
DT/CoreDT/: Design.md
DTEff/: Design.md
FP/CoreFP/: Design.md  README.md
FP/CoreFP/GraalVM/: README.md
FP/CoreFP/Rust/corefp-lingo/: Cargo.toml
FP/CoreFP/Rust/corefp-lingo/src/: lib.rs  name.rs  trace.rs
FP/CoreFP/Scala/: build.sbt
FP/CoreFP/TypeScript-JIT/: README.md
FP/CoreFP/legacy/Rust/corefp-lingo/src/: name.rs
FP/CoreFP/legacy/Scala/: README.md
FP/CoreHaltFP/: Design.md
FP/FullFP/: README.md
FP/low-priority/CoreHaltFP/: README.md
FP/low-priority/CoreLazyFP/: README.md
Firmware/: README.md
FullAssembly/: README.md
FullHardwareDescriptionLanguage/: README.md
FullQuantum/: README.md
FullRelationalProgramming/: README.md
HDL/CoreHDL/: README.md
OS/CoreOS/: README.md
OS/FullOS/: README.md
ProcWoGC/CoreProcWoGC/: README.md
ProcWoGC/FullProcWoGC/: README.md
Q/CoreQ/: README.md
Rel/CoreRel/: README.md
Rel/CoreRel/Scala/corerel-lingo/.bsp/: sbt.json
Scheme/: README.md
Scheme/Core/: README.md
Scheme/CoreExp/: CoreExp.rkt  README.md
Scheme/MinimalExp/: README.md
Scheme/MutCoreExp/: README.md
Scheme/ToyExp/: README.md
Scheme/implementation/scheme/: a.scm
Scheme/legacy/MinimalExp/: MinimalExp.rkt  README.md
Scheme/legacy/MutCore/: README.md
Scheme/polyfill/: internal-make-record-type.internal-record.scm  internal-record.vector.scm  let.define-macro.scm  list.scm
Scheme/polyfill/racket/: define-macro.rkt  internal-make-record-type.rkt  internal-record.rkt  letrec-star.rkt
Scheme/reference/: book.toml  build.sh  watch.sh
Scheme/reference/src/: README.md  SUMMARY.md
Scheme/reference/src/features/: README.md  body-begin.md  boolean.md  define-macro.md  define-record-type-r7rs-mut.md  define-record-type-r7rs.md  define.md  error.md  integer.md  internal-letrec-define-star.md  internal-make-record-type.md  internal-record-mut.md  internal-record.md  let.md  letrec-star.md  letrec.md  library.md  list.md  minimal-integer.md  promise.md  quasiquote.md  r6rs.md  r7rs-small.md  string.md  syntax-rules.md  vector.md
bootstrap-lib/: LICENSE  包.包  序列.包  映射.包
dustbin/racket/注/: 內核.scrbl
lab/Pie/Scala/pie/.bsp/: sbt.json
legacy/DT/CoreDT/: README.md
legacy/DT/FullDT/: README.md
legacy/dustbin/racket/: .gitignore
legacy/legacy/.github/workflows/: scala.yml
legacy/legacy/dustbin/racket/: README.md  TODO.md
legacy/legacy/dustbin/racket/LICENSE/: LLGPL
rust/the-lingo/: .gitignore  Cargo.toml
rust/the-lingo/src/: lib.rs
scala/The-Lingo/: build.sbt
注/: _.scrbl
(+95 files in other folders)
