[package]
name = "the-lingo"
version = "0.1.1"
authors = ["ㄗㄠˋ ㄑㄧˊ <tsao-chi@the-lingo.org>"]
edition = "2018"
license = "MPL-2.0"
description = "An experimental symbolic language"
repository = "https://gitlab.com/The-Lingo/The-Lingo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
async-std = "1.5.0"
async-recursion = "0.1.2"
async-trait = "0.1.24"
lazy_static = "1.4.0"
num-traits = "0.2.11"
num-bigint = "0.2.6"
